--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "description": "an api for a job application challenge",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "start": "nodemon ./index.js"
+    "test": "mocha test/*.js",
+    "start": "nodemon index.js"
   },
   "author": "Matias Gelpi",
   "license": "ISC",
