--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "author": "Matias Gelpi",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "node": "12.22.12"
   },
   "devDependencies": {
